# cozy

./: .buildinfo  .gitignore  LICENSE  LICENSE_USG  README.md  concolic.html  flake.nix  genindex.html  gettingstarted.html  hooks.html  index.html  launchingavisualization.html  objects.inv  paper_eval.sh  py-modindex.html  pyproject.toml  search.html  searchindex.js  setup.py  sideeffects.html  underconstrained.html
.github/workflows/: documentation.yml  tests.yml
_sources/: gettingstarted.rst.txt  hooks.rst.txt  index.rst.txt  launchingavisualization.rst.txt  sideeffects.rst.txt  underconstrained.rst.txt
_sources/autoapi/: index.rst.txt
autoapi/: index.html
autoapi/cozy/: index.html
cozy/: __init__.py  __main__.py  analysis.py  claripy_ext.py  concrete.py  concretization_strategies.py  constants.py  directive.py  execution_graph.py  exploration.py  functools_ext.py  log.py  primitives.py  project.py  range_ext.py  server.py  session.py  side_effect.py  stubs.py  terminal_state.py  textual_wizard.py  types.py  underconstrained.py
cozy-template/: flake.nix
cozy-viz/: README.md  bundle.js  bundler.mjs  colors.js  cozy-viz.js  diffPanel.js  diffStyle.js  flake.nix  graph-tidy.js  graphStyle.js  index.css  index.html  menuBar.js  package-lock.json  package.json  report.css  tooltip.js
cozy-viz/components/: actionDifference.js  app.js  assemblyDifference.js  concretionSelector.js  concretions.js  diffPanel.js  hunk.js  layoutMenu.js  lineDiffView.js  memoryDifference.js  menu.js  menuBar.js  pruneMenu.js  registerDifference.js  report.js  searchInput.js  searchMenu.js  sideEffectDifference.js  (+2 more)
docs/: Makefile
examples/: cmp_buff_overflow.py  cmp_buff_overflow_underconstrained.py  cmp_null_deref.py  cmp_null_deref_concolic.py  cmp_simple_cond.py  cmp_simple_cond_underconstrained.py  cmp_weather_v1.py  cmp_weather_v5.py  cmp_weather_v5_concolic.py  concolic.py  grididps.py  injection_bad.py  injection_demo.py  injection_good.py  lunarrelaysat.py  mrzr_no_fail_check.py  mrzr_tob_no_fail_check.py  mrzr_tob_with_fail_check.py  mrzr_with_fail_check.py  simple_degenerate_compatibility.py  target3.py  target5.py
test_programs/: Makefile
tests/: cmp_buff_overflow.py  cmp_null_deref.py  cmp_simple_cond.py  grididps.py  injection_demo.py  lunarrelaysat.py
(+153 files in other folders)
