[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cozy"
version = "0.0.1"
authors = [
  { name="Caleb Hebling", email="chelbling@draper.com" },
]
description = "A symbolic execution diffing framwork, built on Angr"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "angr >= 9.2.51",
    "networkx >= 3.0",
    "claripy >= 9.2.51"
]
