[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cozy-re"
version = "1.5.0"
authors = [
  { name="Caleb Helbling", email="chelbling@draper.com" },
  { name="Graham Leach-Krouse", email="gleach-krouse@draper.com"},
]
description = "The Cozy Comparative Symbolic Evaluation Engine"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "angr >= 9.2.96",
    "networkx >= 3.0",
    "claripy >= 9.2.96",
    "portion >= 2.4.1",
    "textual >= 0.60.1",
]

[project.urls]
"Homepage" = "https://github.com/draperlaboratory/cozy"
"Bug Tracker" = "https://github.com/draperlaboratory/cozy/issues"

[tool.hatch.build.targets.wheel]
packages = ["cozy"]

[tool.hatch.build.targets.wheel.force-include]
"./cozy-viz" = "cozy-viz"
